# GreenRouting

./: CONTRIBUTING.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  new_model_profile.md
.github/workflows/: ci.yml
examples/: demo.py  load_and_route.py  quickstart.py  train_and_evaluate.py
greenrouting/: __init__.py  demo.py  repl.py
greenrouting/core/: __init__.py  compression.py  decision.py  matcher.py  model_profile.py  registry.py  router.py  taxonomy.py
greenrouting/energy/: __init__.py  green_score.py  profiles.py  tracker.py
greenrouting/pretrained/: classifier_head.pt  config.json
greenrouting/routers/: __init__.py  classifier_router.py  random_router.py
greenrouting/serving/: __init__.py  client.py
greenrouting/training/: __main__.py  synthetic_data.py  trainer.py
greenrouting/utils/: config.py
hf_space/: README.md  app.py  requirements.txt
tests/: conftest.py  test_client.py  test_compression.py  test_energy.py  test_integration.py  test_matcher.py  test_registry.py  test_router.py  test_taxonomy.py  test_training.py
