[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "greenrouting"
version = "0.2.0"
description = "Smart model routing for sustainable AI — reduce energy consumption by routing queries to the most efficient model."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Alan Hourmand", email = "alancreator90@gmail.com" },
]
keywords = ["llm", "routing", "energy", "sustainability", "ai", "green-ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0",
    "transformers>=4.30",
    "sentence-transformers>=2.2",
    "numpy>=1.24",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "httpx>=0.24",
    "rich>=13.0",
]

[project.optional-dependencies]
serve = [
    "litellm>=1.0",
    "fastapi>=0.100",
    "uvicorn>=0.23",
]
train = [
    "datasets>=2.14",
    "wandb>=0.15",
    "scikit-learn>=1.3",
]
energy = [
    "codecarbon>=2.3",
]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
    "mypy>=1.5",
]

[project.urls]
Homepage = "https://www.savetokens.ai"
Repository = "https://github.com/spectrallogic/GreenRouting"
Issues = "https://github.com/spectrallogic/GreenRouting/issues"

[project.scripts]
greenrouting-demo = "greenrouting.demo:main"
greenrouting-repl = "greenrouting.repl:main"

[tool.setuptools.packages.find]
include = ["greenrouting*"]

[tool.setuptools.package-data]
greenrouting = ["pretrained/*.pt", "pretrained/*.json"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
"greenrouting/training/synthetic_data.py" = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
